Search -the arrow not centered (bug 3365)

--- a/Zbang.Cloudents.Mvc4WebRole/Content/Home.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Home.less
@@ -686,20 +686,20 @@ footer {
         .upArrow {
             top: -14px; //rtl (font issue)
             &:before {
-                right: 10px; // diff rtl
+                left: 10px; // diff rtl
             }
         }
     }
     .sTabs {
         &.sTab2 {
             ~ .upArrow:before {
-                right: 75px; // diff rtl
+                left: 75px; // diff rtl
             }
         }
 
         &.sTab3 {
             ~ .upArrow:before {
-                right: 142px; // diff rtl
+                left: 142px; // diff rtl
             }
         }
     }
